tests/rosetta/out/Haskell/approximate-equality.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/approximate-equality.hs:157:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/approximate-equality.hs:149:1
                 /workspace/mochi/tests/rosetta/out/Haskell/approximate-equality.hs:157:1
    |
157 | main = do
    | ^^^^
